@startuml

skinparam packageStyle rectangle
skinparam ClassFontSize 20
skinparam ClassAttributeFontSize 20
skinparam ClassStereotypeFontSize 18
skinparam titleBorderRoundCorner 26
skinparam PackageFontSize 18
skinparam titleBorderThickness 2
skinparam titleBorderColor red
skinparam titleBackgroundColor Cornsilk
skinparam LegendFontSize 8
title smart-socket 基础通信

package org.smart.socket.transport <<Frame>> {

class AioQuickClient<T> <<客户端AIO通信>>{
#AioSession<T> session
#BufferPagePool bufferPool
-AsynchronousChannelGroup asynchronousChannelGroup
+ AioSession start()
+ void shutdown()
+ AioQuickClient setReadBufferSize(int size)
+ AioQuickClient setOption(SocketOption, value)
}

class AioQuickServer<T> <<服务端AIO通信>>{
#ReadCompletionHandler<T> aioReadCompletionHandler
#WriteCompletionHandler<T> aioWriteCompletionHandler
#BufferPagePool bufferPool
-AsynchronousServerSocketChannel serverSocketChannel
-AsynchronousChannelGroup asynchronousChannelGroup
+void start()
+void shutdown()
+AioQuickServer setThreadNum(int num)
+AioQuickServer setReadBufferSize(int size)
+AioQuickServer setBannerEnabled(boolean enabled)
+AioQuickServer setOption(SocketOption, value)
}

class AioSession<T> <<通信会话>>{
#AsynchronousSocketChannel channel
#VirtualBuffer readBuffer
#VirtualBuffer writeBuffer
- Object attachment
-InputStream inputStream
-WriteBuffer writeBuffer
+WriteBuffer writeBuffer()
+void close()
+String getSessionID()
+boolean isInvalid()
+T getAttachment()
+void setAttachment(T attachment)
+InputStream getInputStream()
+InputStream getInputStream(int length)
}

class WriteBuffer <<数据缓冲区>> {
BlockingQueue<VirtualBuffer> bufList
- VirtualBuffer writeInBuf
-BufferPage bufferPage
+void write()
+void flush()
+void close()
+boolean isClosed()
+boolean hasData()
}


AioSession o-- AioQuickClient
AioSession o-- AioQuickServer
WriteBuffer *-down- AioSession
}

package org.smart.socket.buffer <<Frame>> {
note "smart-socket内存池" as N
}


WriteBuffer o-up- org.smart.socket.buffer

legend right
  三刀
endlegend

@enduml